feat: enhance MyMenu configuration and system settings view; improve method documentation, streamline menu entry processing, and add color handling for node types